--- a/plugin/Makefile
+++ b/plugin/Makefile
@@ -1,7 +1,7 @@
 
 
-__start__: obj __lines_for_space__ ../libs/libInterp4Move.so 
-	@echo "  Tworzenie wtyczki zakonczone."
+__start__: obj __lines_for_space__ ../libs/libInterp4Move.so ../libs/libInterp4Set.so 
+	@echo "  Tworzenie wtyczek zakonczone."
 	@echo
 
 obj:
@@ -23,12 +23,21 @@ __lines_for_space__:
 	@echo "  Wtyczka dla polecenia 'Move' zostala utworzona."
 	@echo
 
+../libs/libInterp4Set.so: obj/Interp4Set.o
+	g++ ${LDFLAGS} -o ../libs/libInterp4Set.so obj/Interp4Set.o
+	@echo
+	@echo "  Wtyczka dla polecenia 'Set' zostala utworzona."
+	@echo
 
 obj/Interp4Move.o: src/Interp4Move.cpp ../inc/AbstractInterp4Command.hh\
                    ../inc/AbstractScene.hh ../inc/AbstractComChannel.hh\
                    inc/Interp4Move.hh 
 	g++ -c ${CPPFLAGS} -o obj/Interp4Move.o src/Interp4Move.cpp
 
+obj/Interp4Set.o: src/Interp4Set.cpp ../inc/AbstractInterp4Command.hh\
+                   ../inc/AbstractScene.hh ../inc/AbstractComChannel.hh\
+                   inc/Interp4Set.hh 
+	g++ -c ${CPPFLAGS} -o obj/Interp4Set.o src/Interp4Set.cpp
 
 clean:
 	rm -f obj/*
